2005-10-09  Dan Winship  <danw@novell.com>

	* stetic/Canvas.cs: pseudo-window canvas

	* stetic/Stetic.cs: 
	* stetic/stetic.glade: use it

	* stetic/Grid.cs: QueueResize(), not QueueDraw() when adding
	fields.

2005-10-09  Dan Winship  <danw@novell.com>

	* metacity-sharp: add libmetacity-private wrapper

	* metacity-sharp/test-preview.cs: test program

2005-09-27  Dan Winship  <danw@novell.com>

	* libstetic/HandleWindow.cs (HandleEvent): hack around bgo 316871
	(shaped windows block update events in gtk+ 2.8.0 - 2.8.3).

2005-09-26  Dan Winship  <danw@novell.com>

	* libstetic/wrapper/objects.xml: bring back ThemedIcon images and
	buttons. Add <itemgroup ref="Gtk.Widget"> to a few classes that
	were missing it.

	* libstetic/editor/ThemedIcon.cs: Fix to work under Gtk# 2.4

	* libstetic/wrapper/Button.cs: bring back ThemedIcon buttons

	* libstetic/wrapper/Image.cs: bring back ThemedIcon images.

	* libstetic/wrapper/Frame.cs: don't crash when importing a frame
	with no label widget. If the LabelWidget changes, create a new
	wrapper for it.

	* libstetic/wrapper/Container.cs (GladeImport): don't crash when
	importing a placeholder into a !AllowPlacerholders container.

2005-09-26  Dan Winship  <danw@novell.com>

	* libstetic/wrapper/Dialog.cs (Buttons): make this a number rather
	than having an enum of standard button choices; the HIG prefers
	stronger labels than "OK"/"Yes", so we shouldn't be making it
	easier to use bad labels than good ones.
	(HelpButton): reorder the help button to be the first child so
	that it won't ever get deleted when you decrement Buttons
	(ButtonsChanged): keep the Buttons and HelpButton properties in
	sync if the user manipulates the buttonbox contents by hand

	* libstetic/wrapper/Button.cs (StockId): if the button's ReponseId
	matches its old StockId (or is unset), update it to match it's new
	StockId.
	(IsDialogButton): replaces HasResponseId and is now settable
	rather than being figured out automatically. Also, set