@@ -1,3 +1,7 @@
+2005-10-10  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>
+
+	* metacity-sharp/test-preview.cs: Embed an actual MessageDialog.
+
 2005-10-09  Dan Winship  <danw@novell.com>
 
 	* stetic/Canvas.cs: pseudo-window canvas
